# ROSaruco

./: README.md
aruco_test/: CMakeLists.txt  package.xml
aruco_test/camera_param/: cam_param.xml  intrinsics.yml
aruco_test/src/: aruco_test.cpp
cam_calibration/: CMakeLists.txt  VID5.xml  in_VID5.xml  package.xml
cam_calibration/data/: 1.ppm  10.ppm  2.ppm  3.ppm  4.ppm  5.ppm  6.ppm  7.ppm  8.ppm  9.ppm
